# pgwarehouse

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pgwarehouse/: __main__.py  backend.py  clickhouse_backend.py  duckdb_backend.py  pgwarehouse.py  snowflake_backend.py
pgwarehouse/tests/: pg_setup.sql  test_postgres.py
pgwarehouse/tests/data/: local_parks.csv  my_orders.csv  users10.csv
