[tool.poetry]
name = "pgwarehouse"
version = "0.1.4"
description = "Easily sync your Postgres database to your data warehouse."
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
clickhouse-driver = "^0.2.7"
psycopg2 = "^2.9.9"
snowflake-connector-python = "^3.10.0"
tabulate = "^0.9.0"
testing-postgresql = "^1.3.0"
pytest = "^8.2.0"
duckdb = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pgwarehouse = 'pgwarehouse.__main__:main'
pgwh = 'pgwarehouse.__main__:main'
